--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@ background-image: url(https://res.cloudinary.com/kngkay/image/upload/v1569408433
 height: 100%;
 background-position: center;
 background-repeat: no-repeat;
-background-size: cover;  #E5E5E5; #0EAFF4;
+background-size: cover;
 } 
 
 .cover{
